Changed Styles Location For Consistency

--- a/apps/central/templates/central/central.html
+++ b/apps/central/templates/central/central.html
@@ -3,7 +3,7 @@
 
 {% block links %}
     <link rel="stylesheet" type="text/css" href="{% static 'central/styles/central.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/navbar.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/components/navbar.css' %}">
 {% endblock %}
 
 {% block title %}SMITE Central{% endblock %}
