--- a/apps/esports/templates/esports/esports.html
+++ b/apps/esports/templates/esports/esports.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block links %}
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/navbar.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/components/navbar.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'styles/components/footer.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'esports/styles/components/searchbar.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'esports/styles/esports.css' %}">
