--- a/apps/toxic/templates/toxic/toxic.html
+++ b/apps/toxic/templates/toxic/toxic.html
@@ -4,7 +4,7 @@
 {% block links %}
     {{ block.super }}
     <link rel="stylesheet" type="text/css" href="{% static 'toxic/styles/toxic.css' %}">
-    <link rel="stylesheet" href="{% static 'styles/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/components/navbar.css' %}">
 {% endblock %}
 
 {% block title %}SMITE Toxicity - Under Construction{% endblock %}
