--- a/apps/builder/templates/builder/builder.html
+++ b/apps/builder/templates/builder/builder.html
@@ -4,7 +4,7 @@
 {% block links %}
     {{ block.super }}
     <link rel="stylesheet" type="text/css" href="{% static 'builder/styles/builder.css' %}">
-    <link rel="stylesheet" href="{% static 'styles/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/components/navbar.css' %}">
 {% endblock %}
 
 {% block title %}SMITE Builder - Under Construction{% endblock %}
