--- a/apps/esports/templates/esports/match.html
+++ b/apps/esports/templates/esports/match.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block links %}
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/navbar.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/components/navbar.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'esports/styles/components/video-player.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'esports/styles/match.css' %}">
 {% endblock %}
